working site, mobile first, images, and content responsive, animation and flex working properly

--- a/scss/layout/_columns.scss
+++ b/scss/layout/_columns.scss
@@ -8,6 +8,7 @@
   @media #{$brk-narrow} {
     flex-direction: column;
     display: flex;
+    margin: 12px;
   }
   @media #{$brk-medium} {
     display: flex;
@@ -16,8 +17,7 @@
   }
 }
 
-
-.trip1 {
+.trip1, {
   background-image: url(../img/pic1.jpg);
   @extend %trip-container;
   flex: 2;
