--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,22 @@
+header button {
+  position: absolute;
+  top: 70%;
+  left: 46%;
+  background-color: #DC7725;
+  width: 160px;
+  height: 40px; }
+  @media (max-width: 1080px) {
+    header button {
+      display: none; } }
+
+.aw-discription button {
+  background-color: #DC7725;
+  width: 160px;
+  height: 40px; }
+  @media (max-width: 770px) {
+    .aw-discription button {
+      display: none; } }
+
 .trip {
   height: 420px;
   max-width: 100%; }
@@ -8,7 +27,8 @@
   @media (max-width: 770px) {
     .row1, .row2 {
       flex-direction: column;
-      display: flex; } }
+      display: flex;
+      margin: 12px; } }
   @media (max-width: 1080px) {
     .row1, .row2 {
       display: flex;
@@ -45,39 +65,66 @@
     .trip6 {
       flex: 1 1 100%; } }
 
+body {
+  background-color: #D1D1C9; }
+
+.aw-discription {
+  text-align: center;
+  height: 800px;
+  background-color: #E6E6E0; }
+  .aw-discription h3 {
+    padding-top: 8vh;
+    color: #85857B; }
+  .aw-discription .head {
+    width: 30vw;
+    border: 2px solid #85857B; }
+  .aw-discription a {
+    color: #DC7725; }
+  .aw-discription p {
+    font-size: 22px;
+    color: #85857B;
+    margin-top: 20px;
+    font-stretch: expanded; }
+
 header {
   background-image: url(../img/main.jpg);
   max-width: 100%;
-  height: 100vh;
+  height: 90vh;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center; }
+  @media (max-width: 1080px) {
+    header {
+      height: 60vh; } }
+  @media (max-width: 770px) {
+    header {
+      height: 45vh; } }
+
+nav {
+  width: 80%;
+  margin: auto; }
+  nav ul {
+    display: flex;
+    justify-content: space-around;
+    margin: 0 auto;
+    padding: 60px 0 0; }
+    nav ul li {
+      flex: 1;
+      padding: 5px 0;
+      font-size: 18px;
+      text-align: center;
+      font-family: 'Fjalla One', sans-serif; }
+      @media (max-width: 770px) {
+        nav ul li {
+          display: none; } }
+    nav ul li:nth-child(1) {
+      display: flex;
+      flex: 3; }
 
 a {
   list-style: none;
   text-decoration: none;
   color: white; }
-
-ul {
-  display: flex;
-  justify-content: space-around;
-  margin: 0 auto;
-  padding: 60px 0 0; }
-
-nav {
-  width: 80%;
-  margin: auto; }
-
-li {
-  flex: 1;
-  padding: 5px 0;
-  font-size: 18px;
-  text-align: center;
-  font-family: 'Fjalla One', sans-serif; }
-
-li:nth-child(1) {
-  display: flex;
-  flex: 3; }
 
 nav ul li a,
 nav ul li a:after,
@@ -91,31 +138,45 @@ nav ul li a:hover {
 nav ul li a {
   position: relative;
   z-index: 1; }
+  nav ul li a:hover {
+    color: black; }
+  nav ul li a::after {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    margin: 0;
+    width: 100%;
+    height: 1px;
+    content: '.';
+    color: transparent;
+    background: #F1C40F;
+    visibility: none;
+    opacity: 0;
+    z-index: -1; }
+  nav ul li a:hover:after {
+    opacity: 1;
+    visibility: visible;
+    height: 100%; }
 
-nav ul li a:hover {
-  color: black; }
-
-nav ul li a:after {
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  margin: 0;
-  width: 100%;
-  height: 1px;
-  content: '.';
-  color: transparent;
-  background: #F1C40F;
-  visibility: none;
-  opacity: 0;
-  z-index: -1; }
-
-nav ul li a:hover:after {
-  opacity: 1;
-  visibility: visible;
-  height: 100%; }
+.title {
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+  .title .alaska {
+    margin-top: 6%; }
+    @media (min-width: 1240px) {
+      .title .alaska {
+        margin-top: 170px;
+        height: 150px; } }
+  .title h1, .title h2 {
+    color: white;
+    text-align: center; }
+    @media (min-width: 1240px) {
+      .title h1, .title h2 {
+        font-size: 2.9em; } }
 
 .trip1, .trip2, .trip3, .trip4, .trip5, .trip6 {
   background-repeat: no-repeat;
@@ -123,6 +184,11 @@ nav ul li a:hover:after {
   background-position: center;
   display: flex;
   justify-content: center; }
+  @media (max-width: 770px) {
+    .trip1, .trip2, .trip3, .trip4, .trip5, .trip6 {
+      margin-top: 10px;
+      height: 21vh;
+      border-radius: 3px; } }
   .trip1:hover a, .trip2:hover a, .trip3:hover a, .trip4:hover a, .trip5:hover a, .trip6:hover a {
     transform: scale(1.4);
     transition: all 1s ease-in-out; }
@@ -135,9 +201,19 @@ nav ul li a:hover:after {
     opacity: 0.7;
     display: flex;
     justify-content: center; }
+    @media (max-width: 770px) {
+      .trip1 a, .trip2 a, .trip3 a, .trip4 a, .trip5 a, .trip6 a {
+        height: 60px;
+        width: 60px;
+        background-color: #444; } }
   .trip1 img, .trip2 img, .trip3 img, .trip4 img, .trip5 img, .trip6 img {
     align-self: center;
     height: 40px;
     width: 40px; }
+    @media (max-width: 770px) {
+      .trip1 img, .trip2 img, .trip3 img, .trip4 img, .trip5 img, .trip6 img {
+        height: 30px;
+        width: 30px;
+        background-color: #444; } }
 
 /*# sourceMappingURL=styles.css.map */
