--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -1,3 +1,3 @@
 $brk-narrow: "(max-width: 770px)";
 $brk-medium: "(max-width: 1080px)";
-$brk-wide: "(max-width: 1240px)";
+$brk-wide: "(min-width: 1240px)";
