--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -15,10 +15,17 @@ header {
 }
 
 .aw-discription {
+  
+  @media #{$brk-medium} {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
   button {
     background-color: #DC7725;
     width: 160px;
     height: 40px;
+
 
     @media #{$brk-narrow} {
       display: none;
