--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -1,3 +1,4 @@
 $brk-narrow: "(max-width: 770px)";
 $brk-medium: "(max-width: 1080px)";
 $brk-wide: "(min-width: 1240px)";
+$brk-ex-wide: "(min-width 1440px)";
