--- a/css/styles.css
+++ b/css/styles.css
@@ -127,7 +127,7 @@ body {
     .destination .destination-bg {
       display: inline;
       position: relative;
-      top: 420px;
+      top: 380px;
       left: 100px; } }
 
 .destination-bg-right {
@@ -286,5 +286,25 @@ nav ul li a {
         height: 30px;
         width: 30px;
         background-color: #444; } }
+
+@media (min-width: 1441px) {
+  .kongakut {
+    height: 30px;
+    width: 30px;
+    border-radius: 100%;
+    background-color: #444;
+    border: 20px solid #666;
+    opacity: 0.8;
+    position: relative;
+    left: 65%;
+    top: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center; }
+    .kongakut:hover {
+      transform: scale(1.4);
+      transition: all 1s ease-in-out; }
+    .kongakut a {
+      color: #DC7725; } }
 
 /*# sourceMappingURL=styles.css.map */
