--- a/scss/layout/_animations.scss
+++ b/scss/layout/_animations.scss
@@ -1,4 +1,20 @@
+@keyframes close-image {
+  0% {
+   transform: scale(0.6);
+ }
+ 60% {
+   transform: scale(1.2);
+ }
+ 100% {
+   transform: scale(1);
+ }
+}
+
+
 .kongakut {
+  img {
+    display: none;
+  }
   @media #{$brk-ex-wide} {
     height: 30px;
     width: 30px;
@@ -7,19 +23,31 @@
     border: 20px solid #666;
     opacity: 0.8;
     position: relative;
-    left: 65%;
-    top: 100px;
+    left: 53%;
+    top: -550px;
     display: flex;
     align-items: center;
     justify-content: center;
-
     &:hover {
       transform: scale(1.4);
-      transition: all 1s ease-in-out;
+      transition: all 2s ease-in;
+      }
+
+      &:active {
+        img {
+          display:inline;
+          border-radius: 100%;
+          width:300px;
+          height: 300px;
+          -webkit-animation: close-image 4s ease-out reverse;
+          -webkit-animation-fill-mode: both;
+        }
       }
 
     a {
-      color: #DC7725;
+        color: #DC7725;
+      }
+
     }
-  }
+
   }
