--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,11 @@
 header button {
-  display: flex;
-  align-self: center;
-  justify-content: center;
-  position: relative;
-  margin-bottom: 110px;
+  position: absolute;
+  top: 300px;
+  left: 46%;
   background-color: #DC7725;
   width: 160px;
-  height: 40px;
-  z-index: 3; }
+  height: 800px;
+  border-radius: 30px; }
   @media (min-width: 771px) and (max-width: 1080px) {
     header button {
       display: none; } }
@@ -23,8 +21,7 @@ header button {
 .aw-discription button {
   background-color: #DC7725;
   width: 160px;
-  height: 40px;
-  align-self: center; }
+  height: 40px; }
   @media (max-width: 770px) {
     .aw-discription button {
       display: none; } }
@@ -83,10 +80,7 @@ body {
 .aw-discription {
   text-align: center;
   height: 630px;
-  background-color: #E6E6E0;
-  display: flex;
-  flex-direction: column;
-  align-self: center; }
+  background-color: #E6E6E0; }
   @media (min-width: 771px) and (max-width: 1080px) {
     .aw-discription {
       display: flex;
@@ -94,11 +88,9 @@ body {
   .aw-discription h3 {
     padding-top: 8vh;
     color: #85857B;
-    max-width: 800px;
-    align-self: center; }
+    max-width: 800px; }
   .aw-discription h1 {
-    max-width: 800px;
-    align-self: center; }
+    max-width: 800px; }
   .aw-discription .head {
     width: 30vw;
     border: 2px solid #85857B;
@@ -109,7 +101,6 @@ body {
   .aw-discription a {
     color: #DC7725; }
   .aw-discription p {
-    align-self: center;
     font-size: 22px;
     color: #85857B;
     margin: 20px;
@@ -167,8 +158,6 @@ footer {
   margin: 0; }
 
 header {
-  display: flex;
-  flex-direction: column;
   background-image: url(../img/main.jpg);
   max-width: 100%;
   height: 90vh;
@@ -183,12 +172,13 @@ header {
       height: 45vh; } }
 
 nav {
-  width: 100%; }
+  width: 80%;
+  margin: auto; }
   nav ul {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     margin: 0 auto;
-    padding: 20px 0 0; }
+    padding: 60px 0 0; }
     nav ul li {
       flex: 1;
       padding: 5px 0;
@@ -200,8 +190,7 @@ nav {
           display: none; } }
     nav ul li:nth-child(1) {
       display: flex;
-      flex: 3;
-      margin-left: 10px; }
+      flex: 3; }
 
 a {
   list-style: none;
@@ -234,7 +223,7 @@ nav ul li a {
     height: 1px;
     content: '.';
     color: transparent;
-    background: #DC7725;
+    background: #F1C40F;
     visibility: none;
     opacity: 0;
     z-index: -1; }
@@ -248,61 +237,21 @@ nav ul li a {
   flex-direction: column;
   align-items: center; }
   .title .alaska {
-    margin-top: 20px;
-    padding: 0;
-    transform: scale(2, 2); }
+    margin-top: 25px; }
     @media (min-width: 771px) and (max-width: 1080px) {
       .title .alaska {
-        margin: 0;
-        padding: 0;
-        transform: translate(270px, 78px);
-        border-bottom: 1.5px solid white; } }
+        margin-top: 100px; } }
     @media (min-width: 1081px) and (max-width: 1440px) {
       .title .alaska {
-        margin-top: 210px; } }
+        margin-top: 300px; } }
     @media (min-width: 1441px) {
       .title .alaska {
-        margin-top: 200px;
+        margin-top: 280px;
         height: 150px;
         width: auto; } }
-  .title h1 {
-    position: relative;
-    top: -44vh;
+  .title h1, .title h2 {
     color: white;
-    text-align: center;
-    font-size: 4em;
-    opacity: 0; }
-    @media (min-width: 771px) and (max-width: 1080px) {
-      .title h1 {
-        opacity: 1;
-        font-size: 3.5em;
-        position: relative;
-        top: -20vh; } }
-    @media (min-width: 1081px) and (max-width: 1440px) {
-      .title h1 {
-        opacity: 1;
-        position: relative;
-        top: -44vh;
-        color: white;
-        text-align: center;
-        font-size: 4em; } }
-  .title h2 {
-    position: relative;
-    top: -20vh;
-    color: white;
-    text-align: center;
-    opacity: 0; }
-    @media (min-width: 771px) and (max-width: 1080px) {
-      .title h2 {
-        opacity: 1;
-        top: 4vh; } }
-    @media (min-width: 1081px) and (max-width: 1440px) {
-      .title h2 {
-        opacity: 1;
-        position: relative;
-        top: -20vh;
-        color: white;
-        text-align: center; } }
+    text-align: center; }
 
 .trip1, .trip2, .trip3, .trip4, .trip5, .trip6 {
   background-repeat: no-repeat;
@@ -350,7 +299,7 @@ nav ul li a {
   100% {
     transform: scale(1); } }
 .kongakut img {
-  height: 0; }
+  display: none; }
 @media (min-width: 1441px) {
   .kongakut {
     height: 30px;
